Add a note for generational ZGC
Generational ZGC is a newer version of ZGC which will most likely provide more performance, I haven't done much testing it may require tweaking however.